fixed sm nav bar collapse issue

--- a/web/css/client.css
+++ b/web/css/client.css
@@ -1,3 +1,3 @@
 .stack{
-    display:inline-block;
+    float: right
 }
